<resources>
    <string name="app_name">MVVMBaseModel</string>
    <string name="welcomeMessage">Welcome to MVVMBaseModel!\n this model consists of each ViewModel with DataBinding. Navigation and Data Repositories and with Dialogs</string>
    <!-- Custom Dialog  -->
    <string name="btn_negative_custom_dialog">No</string>
    <string name="btn_positive_custom_dialog">Yes</string>
    <string name="btn_ok_custom_dialog">OK</string>

    <string name="no_internet_connection_msg">Sorry, No Internet connection detected. Please reconnect and try again.</string>
    <string name="no_internet_connectionfailed_con_server">Failed to connect to server.</string>
    <string name="server_error">Something went wrong please try again later</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="error_title">Oops!</string>
    <string name="dialog1">Dialog 1</string>
    <string name="dialog2">Dialog2</string>
    <string name="listView1">ListView 1</string>
    <string name="listView2">ListView 2</string>
    <string name="stepper">Stepper</string>
</resources>
