<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_error"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgIcon"
                android:fontFamily="@font/helveticaneue_bold"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/title_text_color"
                android:textSize="18sp" />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblSubLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/helveticaneue_medium"
            android:gravity="center_horizontal"
            android:text="Payment Ref. No. : G4749724"
            android:textColor="#909aa1"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblSubLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/helveticaneue_medium"
            android:gravity="center_horizontal"
            android:text="Amount Paid: AED 515.00"
            android:textColor="#909aa1"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/helveticaneue_regular"
            android:gravity="center_horizontal"
            android:minHeight="50dp"
            android:text="@string/app_name"
            android:textColor="#909aa1"
            android:textSize="18sp" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/helveticaneue_bold"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="7dp"
                android:paddingRight="30dp"
                android:paddingBottom="7dp"
                android:text="@string/btn_ok_custom_dialog"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/txtYes"
                android:fontFamily="@font/helveticaneue_bold"
                android:gravity="end"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingRight="10dp"
                android:paddingBottom="7dp"
                android:text="@string/btn_negative_custom_dialog"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:visibility="visible" />
        </RelativeLayout>

    </LinearLayout>
</layout>
